# lab-research-code-template

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_AVAILABILITY_TEMPLATE.md  GOVERNANCE.md  LICENSE_NOTICE.md  MAINTAINERS.md  NEW_REPOSITORY_SETUP_CHECKLIST.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  environment.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_update.yml
.github/workflows/: README.md  notebook-check.yml
data/: README.md
docs/: README.md  output_dictionary.md  user_guide.md
examples/: README.md
notebooks/: README.md
results/: README.md
scripts/: README.md
src/: README.md
tests/: README.md
