[project]
name = "project-name"
version = "0.1.0"
description = "Short description of the research code, analysis workflow, or computational tool."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "First Last", email = "email@example.com" }
]
keywords = [
  "reproducible-research",
  "data-analysis",
  "research-software"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
